fix navbar mobile spacing

--- a/frontend/src/assets/styles/navbar.css
+++ b/frontend/src/assets/styles/navbar.css
@@ -3,7 +3,7 @@
     z-index: 4;
     background-color: #2d3748; 
     color: white;
-    padding: 16px;
+    padding: 16px 0;
 }
 
 
